--- a/University/Tasks/Solution/Labs/Plus/DequeVector/DequeVector.vcxproj
+++ b/University/Tasks/Solution/Labs/Plus/DequeVector/DequeVector.vcxproj
@@ -112,6 +112,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Deque.cpp" />
+    <ClCompile Include="Protection.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
