--- a/University/Tasks/Solution/Labs/Plus/DequeVector/DequeVector.vcxproj.filters
+++ b/University/Tasks/Solution/Labs/Plus/DequeVector/DequeVector.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Deque.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="Protection.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
