--- a/University/Tasks/Solution/Labs/Plus/Exceptions/Exceptions.vcxproj
+++ b/University/Tasks/Solution/Labs/Plus/Exceptions/Exceptions.vcxproj
@@ -111,6 +111,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Exception.h" />
     <ClInclude Include="Exceptions.h" />
   </ItemGroup>
   <ItemGroup>
