--- a/University/Tasks/Solution/Labs/Plus/Exceptions/Exceptions.vcxproj.filters
+++ b/University/Tasks/Solution/Labs/Plus/Exceptions/Exceptions.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="Exceptions.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="Exception.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MapUn_Map.cpp">
